         the width of a channel to be too large (too few channels in displayed
         range.
       - Do some jiggerypokery with 1-d gates to make them more consistent with
         their integration:
         o On acceptance the right point is adjusted to the right by a channel.
         o Gate checking is now exclusive of the right point.
         o On entering in the display the adjustment is un-done so that
           Xamine will display correctly.
 Week of June 4, 2007
       - Ensure that Xamine's SuperPrompt::SetList message boxes
         from Xamine_error_msg() get displayed by making them
         children of the prompter's parent rather than of the prompter
         which, after all is hidden.
 Week of June 11, 2007
       - Get nice support for ubuntu edgy eft.
 Week of June 25, 2007
       - Begin adding the 'integrate' command.
 Week of July 2, 2007
       - 2-d integrations in Xamine had displayed standard deviations not
         fwhm's as advertised.
       - Add docs for integrate command.
Week of July 9, 2007
       - Corrected CPacket.cpp for jumbos in scriptable.
Week of August 13, 2007
       - BZ 318 - Old GUI SpectrumGenerator.tcl was not listing  applied
         gates correctly when the filter mask was not *
Week of Sept 10,2007
       - BZ 318 revisited... need to use hash tables for the applied gates
         rather than lists to be utterly reliable.
       - Fix error in gamma 2d deluxe where if only one y parameter was specified
         one of the constructors would segfault because it was mistakenly getting units
         from y[1] not y[0].
       - Fix error in swrite NSCLAsciiSpectrumFormatter...get axis limits directly from the
         spectrum description rather than dorking around to get them from
         the converter.
Pre3 released

October 11, 2007 Pre 4 (or possibly 3.2-001) opened.

October 12, 2007 - Make multicolored monster understand Gamman deluxe spectra.