@@ -709,3 +709,6 @@ Pre3 released
 October 11, 2007 Pre 4 (or possibly 3.2-001) opened.
 
 October 12, 2007 - Make multicolored monster understand Gamman deluxe spectra.
+October 15, 2007 - Redid a bunch of stuff with the test data sources to 
+            allow attach, re-attach , re-re attach etc.  Don't think there
+            are any memory leaks.
